# revolution-eda

./: .env  .env.example  .gitignore  AGENTS.md  AI_TERMINAL_IMPLEMENTATION.md  COMMERCIAL_PLUGIN_DEVELOPMENT_GUIDE.md  LICENSE.txt  Mozilla Public License, version 2.0.html  README.md  README_pypi.md  WARP.md  __init__.py  build_linux.sh  build_windows.ps1  klayout_lvsdb_parser_output.json  plugins.json  pyproject.toml  pyrightconfig.json  requirements.txt  revada.conf  reveda.conf  reveda.py  reveda.qrc  reveda_installer.iss
.github/: copilot-instructions.md
.github/workflows/: build-nuitka.yml
.zed/: settings.json  tasks.json
defaultPDK/: __init__.py  callbacks.py  compileNuitka.sh  config.json  layoutLayers.py  layout_layers.py  pcells.py  process.py  schLayers.py  sch_layers.py  symLayers.py  sym_layers.py
docs/: AI_TERMINAL.md  IMPLEMENTATION_PLAN.md  LICENSE_ISSUANCE_GUIDE.md  PLUGIN_LICENSING.md  binaryPlugins.md  configEditor.md  index.md  installation.md  labels.md  layoutTutorial.md  plugins.md  revedaMainWindow.md  schematicTutorial.md  symbolTutorial.md
plugins/aiTerminal/: README.md  __init__.py  aiTerminal.py  ai_terminal.py  claudeAiAgent.py  config.json  geminiAiAgent.py  mistralAiAgent.py
revedaEditor/: LICENSE.txt  __init__.py
revedaEditor/backend/: LVSModelView.py  __init__.py  dataDefinitions.py  data_definitions.py  drcModelView.py  drc_model_view.py  editFunctions.py  edit_functions.py  hdlBackEnd.py  hdl_back_end.py  libBackEnd.py  lib_back_end.py  libraryMethods.py  libraryModelView.py  library_methods.py  library_model_view.py  licenseManager.py  pdkLoader.py  pdkPaths.py  pdk_loader.py  pluginsLoader.py  plugins_loader.py  processManager.py  projectManager.py  startThread.py  start_thread.py  undoStack.py  undo_stack.py
revedaEditor/checks/: schematic.py
revedaEditor/common/: __init__.py  fileCache.py  labels.py  layoutShapes.py  layout_shapes.py  net.py  shapes.py
revedaEditor/docs/: AI_TERMINAL.md  configEditor.md  lvsNetlisting.md  symbolTutorial.md
revedaEditor/fileio/: __init__.py  createSymbols.py  create_symbols.py  exportGDS.py  export_gds.py  extractedSchematic.py  extracted_schematic.py  gdsExport.py  importGDS.py  importLayp.py  importSpice.py  importVeriloga.py  importXschemSym.py  import_gds.py  import_layp.py  import_spice.py  import_veriloga.py  import_xschem_sym.py  importlvsdb.py  importlyrdb.py  layoutEncoder.py  layout_encoder.py  loadJSON.py  load_json.py  schemaValidation.py  schematicEncoder.py  schematic_encoder.py  spiceNetlist.py  symbolEncoder.py  symbol_encoder.py
revedaEditor/fileio/schemas/: layout.schema.json  schematic.schema.json  symbol.schema.json
revedaEditor/gui/: __init__.py  alignItems.py  align_items.py  configEditor.py  config_editor.py  editFunctions.py  edit_functions.py  editorFactory.py  editorTypes.py  editorViews.py  editorWindow.py  editor_factory.py  editor_types.py  editor_views.py  editor_window.py  fileDialogues.py  file_dialogues.py  helpBrowser.py  help_browser.py  layoutDialogues.py  layoutEditor.py  layout_dialogues.py  layout_editor.py  libraryBrowser.py  libraryRegistry.py  library_browser.py  library_registry.py  lsw.py  lvsResults.py  lvs_results.py  pdkRegistry.py  pdk_registry.py  pluginsRegistry.py  plugins_registry.py  propertyDialogues.py  property_dialogues.py  pythonConsole.py  python_console.py  revedaMain.py  reveda_main.py  (+14 more)
revedaEditor/netlisting/: __init__.py  spectreNetlist.py  spectre_netlist.py  vacaskNetlist.py  xyceNetlist.py  xyce_netlist.py
revedaEditor/resources/: resources.py
revedaEditor/scenes/: __init__.py  editorScene.py  editor_scene.py  layoutScene.py  layout_scene.py  schematicScene.py  schematic_scene.py  symbolScene.py  symbol_scene.py
revedaEditor/tests/: test_labels_nlp.py  test_net.py  test_netlisting.py  test_schema_validation.py  test_symbol_pins.py
