[project]
name = "revolution-eda"
version = "0.8.3"
description = "Custom IC Design Environment for Professionals"
authors = [{ name = "Revolution Semiconductor", email = "48187772+eskiyerli@users.noreply.github.com" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { file = "LICENSE.txt" }

keywords = [
    "EDA",
    "IC Design",
    "Semiconductor",
    "Layout",
    "Schematic",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "PySide6==6.10.0",
    "quantiphy>=2.20,<2.21",
    "python-dotenv~=1.1.0",
    "numpy~=2.3.1",
    "gdstk~=0.9.60",
    "nuitka==2.7.16",
    "polars==1.34.0",
]

[project.urls]
Homepage = "https://github.com/eskiyerli/revolution-eda"
Repository = "https://github.com/eskiyerli/revolution-eda"
Documentation = "https://github.com/eskiyerli/revolution-eda/tree/master/docs"

[project.scripts]
reveda = "reveda:main"

[dependency-groups]
dev = [
    "pytest~=8.4.1",
    "polars~=1.34.0",
    "nuitka==2.7.16",
    "black==25.9.0",
    "markdown~=3.9",
    "pyqtgraph",
]

[tool.uv]

[tool.uv.sources]
pyqtgraph = { git = "https://github.com/pyqtgraph/pyqtgraph.git", branch = "master" }

[tool.hatch.build.targets.sdist]
include = [
    "revedaEditor",
    "reveda.py",
    "defaultPDK",
    "pyqtgraph/**",
]
exclude = [
    "tests",
    "examples",
    "docs",
]

[tool.hatch.build.targets.wheel]
include = [
    "revedaEditor",
    "reveda.py",
    "defaultPDK",
    "pyqtgraph/**",
]
exclude = [
    "tests",
    "examples",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
