[tool.poetry]
name = "revolution-eda"
version = "0.9.0"
description = "Custom IC Design Environment for Professionals"
authors = ["Revolution Semiconductor <48187772+eskiyerli@users.noreply.github.com>"]
license = "Mozilla Public License v2"
readme = "README.md"
packages = [
    { include = "revedaEditor" },
    { include = "reveda.py" },
    { include = "defaultPDK" },
    { include = ".env.example" }
]

homepage = "https://github.com/eskiyerli/revolution-eda"
repository = "https://github.com/eskiyerli/revolution-eda"
documentation = "https://github.com/eskiyerli/revolution-eda/tree/master/docs"
keywords = ["EDA", "IC Design", "Semiconductor", "Layout", "Schematic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]

include = [
    { path = "pyqtgraph/**" },
    { path = "revedaEditor/fileio/schemas/*.json" }
]
exclude = [
    "examples",
    "icons"
exclude = [
    "revedaEditor/tests",
    "revedaLicense",
    "scripts",
    "*.pem",
    "*.key",
    "*.ps1",
    "*.sh",
    "test_license.py",
    "defaultPDK/*.sh"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/eskiyerli/revolution-eda/issues"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
PySide6 = ">=6.10.0"
quantiphy = "~2.20"
python-dotenv = "~1.2.0"
numpy = "~2.3.1"
gdstk = "~0.9.62"
markdown = "^3.9"
lxml = "^6.0.0"
polars = "~1.35.0"
orjson = "^3.11.4"
jsonschema = "^4.23.0"
anthropic = "^0.75.0"
google-generativeai = "^0.8.5"
PySide6 = "~6.11.1"
quantiphy = "~2.21"
python-dotenv = "~1.2.2"
numpy = "~2.4.4"
gdstk = "~1.0.0"
markdown = "^3.10.2"
lxml = "^6.1.0"
polars = "~1.40.1"
orjson = "^3.11.9"
httpx = "^0.28.1"
cryptography = "^46.0.3"
pyqtgraph = "~0.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "~8.4.1"
black = "~25.9.0"
nuitka = "^4.0"
hypothesis = "^6.155.1"
anthropic = "^0.75.0"
google-genai = "^1.74.0"
mistralai = "^1.12.4"

[tool.poetry.scripts]
reveda = "reveda:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 92